# Internship-Studies

./: .gitignore  .gitmodules  README.md  pyproject.toml
Git-Studies/: chatgpt-notes.md  git-notes.md  introduction.md  login-system.txt  ornek-sunum.pptx  test.txt  test2.txt  test3.txt
Huawei-Ai-Course/: notes.md
Langchain-Studies/: notes.md
Langchain-Studies/asistan-projesi/: basit-chain-ile.py  metin-okuma.py  pyproject.toml  rag-metadata-okuma.py  rag-metadata-olusturma.py
Langchain-Studies/asistan-projesi/data/: ornek-text.txt
Langchain-Studies/asistan-projesi/db/chroma_db_with_metadata/c9d8d0b5-e5c2-4154-86e9-83d335c4f01d/: index_metadata.pickle
Prompt-Engineering/: notes.md  pal-example.py
Prompt-Engineering/PAL-example/: pal-example.py  pyproject.toml
Python-Studies/: configurations.md  yapilandirma.md
Python-Studies/poetry-project/: pyproject.toml
Python-Studies/uv-project/: main.py
Python-Studies/uv-project2/: main.py  pyproject.toml
